--- a/src/styles/Reusable/servicesList.css
+++ b/src/styles/Reusable/servicesList.css
@@ -1,44 +1,50 @@
-.serviceListMain{
-    width: 370.67px;
-    height: 350px;
-    border-radius: 24px;
-    padding: 36px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.serviceListMain {
+  width: 370.67px;
+  height: 350px;
+  border-radius: 24px;
+  padding: 36px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.serviceListText1{
-    width: 245px;
-    height: 66px;
-    font-weight:500;
-    font-size: 36px;
-    line-height: 40px;
-    text-transform: uppercase;
+.serviceListText1 {
+  width: 245px;
+  height: 66px;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 40px;
+  text-transform: uppercase;
 }
-.serviceListText2{
-    width: 298.67px;
-    height: 96px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
+.serviceListText2 {
+  /* width: 298.67px; */
+  /* height: 96px; */
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 28px;
 }
 
 /* Responsive Styles */
 
 /* Tablet (max-width: 1024px) */
 @media (max-width: 1024px) {
-    
-    
+  .serviceListMain {
+    width: 65vw;
+    height: 35vh;
   }
-  
-  /* Mobile Landscape (max-width: 768px) */
-  @media (max-width: 768px) {
-    
-      
+}
+
+/* Mobile Landscape (max-width: 768px) */
+@media (max-width: 768px) {
+  .serviceListMain {
+    width: 60vw;
+    height: 40vh;
   }
-  
-  /* Mobile Portrait (max-width: 480px) */
-  @media (max-width: 480px) {
-   
+}
+
+/* Mobile (max-width: 480px) */
+@media (max-width: 480px) {
+  .serviceListMain {
+    height: 50vh;
   }
+}
