--- a/src/styles/Reusable/leaderList.css
+++ b/src/styles/Reusable/leaderList.css
@@ -179,8 +179,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10px;
-    height: 10px;
+    width: 5vw;
+    height: 4vh;
     border-radius: 50px;
     border: 1px solid #ffffff4d;
   }
