--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -40,7 +40,6 @@
 
 .aboutContent h3 {
   gap: 10px;
-  padding: 10px;
   color: white;
   font-size: 2.2rem;
 }
@@ -76,16 +75,15 @@
     padding: 40px;
     flex-direction: column;
     height: auto;
-    align-items: center;
   }
 
   .aboutMain {
-    width: 80%; /* Wider on smaller screens */
-    text-align: center;
+    width: 80%; 
+    text-align: start;
   }
 
   .aboutContent {
-    width: 80%; /* Wider on smaller screens */
+    width: 100%; /* Wider on smaller screens */
   }
 
   .btn-area {
@@ -134,7 +132,7 @@
 /* Mobile Screens */
 @media (max-width: 480px) {
   .aboutSection {
-    padding: 20px;
+    padding: 30px;
   }
 
   .aboutContent h3 {
