--- a/src/styles/section4.css
+++ b/src/styles/section4.css
@@ -1,7 +1,6 @@
 .section4main {
   width: 100%;
   height: 274px;
-
   background-color: black;
   overflow: hidden; /* Prevent overflow */
 }
@@ -30,38 +29,36 @@
   transform-origin: center center;
   transform: translate(-50%, -50%);
 }
-.div1 p{
-    padding: 2vw;
-    font-size: 1.8rem;
-    color: white;
+.div1 p {
+  padding: 2vw;
+  font-size: 1.8rem;
+  color: white;
 }
 
-.div1-small{
-    width: 19px;
-    height: 19px;
-    background-color: white;
-    transform: rotate(42.01deg);
-
+.div1-small {
+  width: 19px;
+  height: 19px;
+  background-color: white;
+  transform: rotate(42.01deg);
 }
 
-.div2 p{
-    padding: 2vw;
-    font-size: 1.8rem;
-    color: #535353;
+.div2 p {
+  padding: 2vw;
+  font-size: 1.8rem;
+  color: #535353;
 }
 
-.div2-small{
-    width: 19px;
-    height: 19px;
-    background-color: #535353;
-    transform: rotate(42.01deg);
-
+.div2-small {
+  width: 19px;
+  height: 19px;
+  background-color: #535353;
+  transform: rotate(42.01deg);
 }
 
 .div1 {
   background-color: #4034eb;
   transform: skew(-5deg) translate(-50%, -50%) rotate(2.99deg);
-  margin-left: 1.vw;
+  margin-left: 1vw;
   z-index: 2;
 }
 
@@ -71,8 +68,133 @@
 }
 
 /* Media Queries for responsiveness */
+@media (max-width: 1024px) {
+  .div1,
+  .div2 {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    align-items: center;
+    position: absolute;
+    width: 105%;
+    height: 50px;
+    background-color: #4034eb; /* Default background for div1 */
+    top: 50%;
+    left: 50%;
+    transform-origin: center center;
+    transform: translate(-50%, -50%);
+  }
+  .div1-small, .div2-small {
+    width: 12px;
+    height: 12px;
+    background-color: white;
+    transform: rotate(42.01deg);
+  }
+
+  .div1 p, .div2 p {
+    padding: 2vw;
+    font-size: 1.2rem;
+    color: white;
+  }
+
+  .div1 {
+    background-color: #4034eb;
+    transform: skew(-5deg) translate(-50%, -50%) rotate(3.99deg);
+    margin-left: 1vw;
+    z-index: 2;
+  }
+  .div2 {
+    background-color: #171717;
+    transform: skew(-5deg) translate(-50%, -50%) rotate(-3.99deg);
+  }
+}
+
 @media (max-width: 768px) {
   .section4main {
-    display: none;
+    height: 200px;
+  }
+
+  .div1,
+  .div2 {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    align-items: center;
+    position: absolute;
+    width: 105%;
+    height: 40px;
+    background-color: #4034eb; /* Default background for div1 */
+    top: 50%;
+    left: 50%;
+    transform-origin: center center;
+    transform: translate(-50%, -50%);
+  }
+  .div1-small, .div2-small {
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    transform: rotate(42.01deg);
+  }
+
+  .div1 p, .div2 p {
+    padding: 2vw;
+    font-size: 0.9rem;
+    color: white;
+  }
+
+  .div1 {
+    background-color: #4034eb;
+    transform: skew(-5deg) translate(-50%, -50%) rotate(3.99deg);
+    margin-left: 1vw;
+    z-index: 2;
+  }
+  .div2 {
+    background-color: #171717;
+    transform: skew(-5deg) translate(-50%, -50%) rotate(-3.99deg);
+  }
+}
+@media (max-width: 480px) {
+
+  .section4main {
+    height: 160px;
+  }
+
+  .div1,
+  .div2 {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    align-items: center;
+    position: absolute;
+    width: 110%;
+    height: 30px;
+    background-color: #4034eb;
+    top: 50%;
+    left: 50%;
+    transform-origin: center center;
+    transform: translate(-50%, -50%);
+  }
+  .div1-small, .div2-small {
+    width: 8px;
+    height: 8px;
+    background-color: white;
+    transform: rotate(42.01deg);
+  }
+
+  .div1 p, .div2 p {
+    padding: 2vw;
+    font-size: 0.6rem;
+    color: white;
+  }
+
+  .div1 {
+    background-color: #4034eb;
+    transform: skew(-5deg) translate(-50%, -50%) rotate(3.99deg);
+    margin-left: 1vw;
+    z-index: 2;
+  }
+  .div2 {
+    background-color: #171717;
+    transform: skew(-5deg) translate(-50%, -50%) rotate(-3.99deg);
   }
 }
