--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -102,7 +102,7 @@
 
   .aboutMain {
     width: 100%;
-    text-align: center;
+    text-align: start;
   }
 
   .aboutContent {
@@ -112,7 +112,7 @@
   }
 
   .aboutContent h3 {
-    font-size: 1.75rem; /* Slightly smaller heading */
+    font-size: 1.5rem; /* Slightly smaller heading */
   }
 
   .btn-area {
@@ -121,11 +121,14 @@
   }
 
   .about-btn {
-    width: 90%;
+    width: 30%;
+    padding: 5px;
   }
 
   .about-btn div {
-    width: 100%;
+    width: 70%;
+    height: 30px;
+    padding: 6px 12px;
   }
 }
 
