--- a/src/styles/Reusable/projectList.css
+++ b/src/styles/Reusable/projectList.css
@@ -10,7 +10,7 @@
 /* Image Container */
 .proListMainImg {
   width: 100%;
-  height: 0;
+  height: 41.48vh;
   padding-bottom: 72%; /* Maintain aspect ratio for responsiveness */
   border-radius: 24px;
   background-color: #171717;
@@ -84,7 +84,7 @@
   }
 
   .proListMainImg {
-    padding-bottom: 60%; /* Adjust aspect ratio for smaller screens */
+
   }
 
   .proListTextSecond {
@@ -112,7 +112,7 @@
   }
 
   .proListMainImg {
-    padding-bottom: 40%;
+    /* padding-bottom: 40%; */
   }
 
   .proListTextSecond {
