--- a/src/styles/Reusable/projectList.css
+++ b/src/styles/Reusable/projectList.css
@@ -11,7 +11,7 @@
 /* Image Container */
 .proListMainImg {
   width: 100%;
-  height: 41.48vh; /* As per your calculation */
+  height: 448pxh; /* As per your calculation */
   border-radius: 24px;
   background-color: #171717;
   overflow: hidden;
