--- a/src/styles/Reusable/servicesList.css
+++ b/src/styles/Reusable/servicesList.css
@@ -47,4 +47,15 @@
   .serviceListMain {
     height: 50vh;
   }
+  .serviceListText1{
+    font-size: 2rem;
+    line-height: 8vh;
+  }
+  .serviceListText2 {
+ 
+    font-weight: 400;
+    font-size: .8rem;
+    line-height: 20px;
+  }
+  
 }
