--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -1,5 +1,5 @@
 .servicesMain {
-  padding: 24px 80px; /* Corrected padding format */
+  padding: 24px 80px; 
   gap: 10px;
   display: flex;
   justify-content: center;
@@ -8,9 +8,9 @@
 }
 
 .serviceContents {
-  width: 90vw; /* Adapt for different screen sizes */
-  max-width: 1280px; /* Keeps the laptop view consistent */
-  height: auto; /* Auto height for flexibility */
+  width: 90vw; 
+  max-width: 1280px; 
+  height: auto; 
   border-radius: 24px;
   padding: 4.69vw;
   display: flex;
@@ -20,23 +20,23 @@
 }
 
 .contentText {
-  width: 90vw; /* Adapt width to viewport */
-  max-width: 1160px; /* Limit max width for laptop view */
+  width: 90vw; 
+  max-width: 1160px; 
   display: flex;
-  gap: 2.81vw; /* Converted from 36px */
+  gap: 2.81vw; 
 }
 
 .contentText1 {
   flex: 1;
-  font-size: 1.56vw; /* Converted from 20px */
-  line-height: 2.19vw; /* Converted from 28px */
+  font-size: 1.56vw; 
+  line-height: 2.19vw; 
   color: white;
 }
 
 .contentText2 {
   flex: 1;
-  font-size: 2vw; /* Converted from 36px */
-  line-height: 3.75vw; /* Converted from 48px */
+  font-size: 2vw; 
+  line-height: 3.75vw; 
   color: white;
 }
 
@@ -58,27 +58,27 @@ span {
 @media (max-width: 1024px) {
   .serviceContents {
     gap: 60px;
-    padding: 20px 0px; /* Adjust padding for tablets */
+    padding: 20px 0px; 
   }
 
   .contentText {
-    flex-direction: column; /* content vertically */
+    flex-direction: column; 
     gap: 30px;
   }
 
   .contentText1, .contentText2 {
-    font-size: 1.5rem; /* Adjust text size for tablets */
+    font-size: 1.5rem; 
     text-align: center;
   }
 
   .serviceList {
-    flex-direction: column; /* Stack services list vertically */
+    flex-direction: column; 
     align-items: center;
     gap: 20px;
   }
 
   .serviceListMain {
-    width: 100%; /* Ensure full width for services */
+    width: 100%; 
     margin-bottom: 20px;
   }
 }
@@ -94,8 +94,7 @@ span {
     gap: 20px;
   }
 
-  .contentText1, .contentText2 {
-    font-size: 1.2rem; /* Adjust for smaller devices */
+  .contentText1, .contentText2 {/* Adjust for smaller devices */
     text-align: center;
   }
 
@@ -110,7 +109,7 @@ span {
   }
 }
 
-/* Mobile Portrait (max-width: 480px) */
+/* Mobile (max-width: 480px) */
 @media (max-width: 480px) {
   .serviceContents {
     gap: 20px;
@@ -126,7 +125,9 @@ span {
     font-size: 1.2rem; 
   }
   .contentText2 {
-    font-size: .8rem; 
+    font-size: .8rem;
+    line-height: 18px;
+    padding: 5px;
   }
 
   .serviceList {
